# Gauge

./: .coverage.claude.pid10.XJZfmY4x.HBBFQnhhOVBh  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
frontend/: .gitignore  index.html  package-lock.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/src/: App.js  App.tsx  api.js  api.ts  index.css
frontend/src/components/: Blog.tsx  ChatPanel.js  ChatPanel.tsx  DocChatPage.js  DocChatPage.tsx  IntakeWizard.js  IntakeWizard.tsx  PDFUpload.js  PredictorPage.js  PredictorPage.tsx  ResultCard.js  ResultCard.tsx  Select.js  Select.tsx  Slider.js  Slider.tsx  Toggle.js  Toggle.tsx  WhatIfChart.js  WhatIfChart.tsx
scripts/: fetch_meps.py  inspect_meps.py
src/gauge/: __init__.py  api.py  eval.py  main.py
src/gauge/benefits/: __init__.py  calculator.py  models.py  repository.py  seed.py
src/gauge/docchat/: __init__.py  chunker.py  index.py  llm.py  schemas.py  service.py  sqlite_store.py  store.py
src/gauge/plan_extract/: extractor.py  schemas.py
src/gauge/predictor/: __init__.py  annual_cost.py  meps.py  model.py  whatif.py
src/gauge/session/: models.py  (+2 more)
src/health_app/: api.py  main.py
src/health_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py
tests/e2e/: test_docchat_journeys.py  test_journeys.py  test_predictor_journeys.py  test_session_journeys.py
tests/integration/: test_api.py  test_docchat_api.py  test_main.py  test_predictor_api.py  test_session_api.py
tests/unit/: test_annual_cost.py  test_calculator.py  test_dataset.py  test_docchat_chunker.py  test_docchat_extractor.py  test_docchat_index.py  test_docchat_llm.py  test_docchat_service.py  test_meps_loader.py  test_models.py  test_plan_extract.py  test_predictor.py  test_real_dataset.py  test_session_store.py  test_sqlite_stores.py  test_whatif.py
(+19 files in other folders)
